src/snapshots/new_nu_parser__test__node_output@pipeline.nu.snap
---
source: src/test.rs
expression: evaluate_example(path)
input_file: tests/pipeline.nu
---
==== COMPILER ====
0: Int (0 to 1) "1"
1: Pipe (2 to 3)
2: Int (4 to 5) "3"
3: PipeElement { expr: NodeId(2), redirection: None } (4 to 6)
4: Pipe (6 to 7)
5: Int (8 to 9) "5"
6: PipeElement { expr: NodeId(5), redirection: None } (8 to 9)
7: Pipeline(PipelineId(0)) (0 to 9)
8: Int (42 to 43) "1"
9: Pipe (44 to 45)
10: Int (46 to 47) "2"
11: PipeElement { expr: NodeId(10), redirection: None } (46 to 48)
12: Pipe (48 to 49)
13: Int (50 to 51) "3"
14: PipeElement { expr: NodeId(13), redirection: None } (50 to 51)
15: Pipeline(PipelineId(1)) (42 to 51)
16: Block(BlockId(0)) (0 to 52)
==== SCOPE ====
0: Frame Scope, node_id: NodeId(16) (empty)
==== TYPES ====
0: int
1: unknown
2: int
3: int
4: unknown
5: int
6: int
7: int
8: int
9: unknown
10: int
11: int
12: unknown
13: int
14: int
15: int
16: int
==== IR ====
register_count: 0
file_count: 0
==== IR ERRORS ====
Error (NodeId 7): node Pipeline(PipelineId(0)) not suported yet
