src/snapshots/new_nu_parser__test__node_output@record2.nu.snap
---
source: src/test.rs
expression: evaluate_example(path)
input_file: tests/record2.nu
---
==== COMPILER ====
0: String (1 to 4) ""a""
1: Int (6 to 7) "1"
2: String (9 to 12) ""b""
3: Int (14 to 15) "2"
4: Record(RecordId(0)) (0 to 16) - sub_nodes: pairs: 0: 1,2: 3
5: Block(BlockId(0)) (0 to 17) - sub_nodes: 4
==== SCOPE ====
0: Frame Scope, node_id: NodeId(5) (empty)
==== TYPES ====
0: unknown
1: int
2: unknown
3: int
4: record<"a": int, "b": int>
5: record<"a": int, "b": int>
==== IR ====
register_count: 0
file_count: 0
==== IR ERRORS ====
Error (NodeId 4): node Record(RecordId(0)) not suported yet

