src/snapshots/new_nu_parser__test__node_output@unit.nu.snap
---
source: src/test.rs
expression: evaluate_example(path)
input_file: tests/unit.nu
snapshot_kind: text
---
==== COMPILER ====
0: Unit (0 to 2)
1: Block(BlockId(0)) (0 to 3)
==== SCOPE ====
0: Frame Scope, node_id: NodeId(1) (empty)
==== TYPES ====
0: ()
1: ()
