src/snapshots/new_nu_parser__test__node_output@variable_names.nu.snap
---
source: src/test.rs
expression: evaluate_example(path)
input_file: tests/variable_names.nu
---
==== COMPILER ====
0: Variable (0 to 4) "$abc"
1: Variable (5 to 7) "$_"
2: Variable (8 to 12) "$a_c"
3: Garbage (14 to 17)
4: Block(BlockId(0)) (0 to 18) - sub_nodes: 0,1,2,3
==== COMPILER ERRORS ====
Error (NodeId 3): variable name must be a bareword

